- Added the ability to gather a running average of the last few seconds of RSSI values (I'm currently trying it out with 5 seconds). I'm submitting those values to the Broker and using them for a coarse grained distance determination. It should hopefully be less prone to noise than just using the last available RSSI value. - Other minor fixes

--- a/mobile/src/main/res/values/bools.xml
+++ b/mobile/src/main/res/values/bools.xml
@@ -14,7 +14,7 @@
     <bool name="preferences_default_allow_persistent_service">true</bool>
     <bool name="preferences_default_allow_zeroconf">false</bool>
     <bool name="preferences_default_beacon_scan">true</bool>
-    <bool name="preferences_default_beacon_scan_realtime_updates">true</bool>
+    <bool name="preferences_default_beacon_scan_realtime_updates">false</bool>
     <bool name="preferences_default_beacon_advertise">false</bool>
     <bool name="preferences_default_device_capabilities_view">true</bool>
     <bool name="preferences_default_device_capabilities_control">true</bool>
