- Added Kotlin support to the project while streamlining dependencies as much as possible.

--- a/mobile/src/main/res/menu/menu_main.xml
+++ b/mobile/src/main/res/menu/menu_main.xml
@@ -55,6 +55,11 @@
         android:title="@string/action_wifi"
         app:showAsAction="never" />
     <item
+        android:id="@+id/action_kotlin_activity"
+        android:orderInCategory="100"
+        android:title="@string/action_kotlin_activity"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_preferences"
         android:orderInCategory="100"
         android:title="@string/action_preferences"
