--- a/mobile/src/main/res/values/ic_launcher_background.xml
+++ b/mobile/src/main/res/values/ic_launcher_background.xml
@@ -1,5 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2019 Pedro Albuquerque Santos.
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2020 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
   ~
@@ -11,5 +12,5 @@
   -->
 
 <resources>
-    <color name="ic_launcher_background">#D63A7C</color>
+    <color name="ic_launcher_background">#F1B079</color>
 </resources>
