- Dependency updates and changed a few config options to make everything work on Android Studio 4.1

--- a/mobile/src/main/res/layout/content_audio.xml
+++ b/mobile/src/main/res/layout/content_audio.xml
@@ -124,7 +124,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audio_recording_filename_text_view" />
 
-    <Switch
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/audio_tone_cycle_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
